Add: intro ,contacts, skills, code-example, languages, education

--- a/index.html
+++ b/index.html
@@ -36,68 +36,93 @@
            </nav>  
           </div>     
         </div> 
-     
+    </header> 
 
-      <!--   <img src="photo/msg777546934-72244.jpg" width="300" alt="Nargiza's avatar">
-        <h1>Nargiza Daiyrbekova</h1>
-        <p>I am responsible, proactive, stress-resistant, sociable, honest. I look at everything with a positive attitude. I am fond of drawing, I like to draw portraits, I also like to do athletics, run in the morning, take pictures of nature, edit videos. And now I'm trying to get more experience and knowledge in the field of programming. I really like coding right now.</p>
-       
-        <h2>Contacts</h2>
-        <ul>
-            <li>
-                <h3>Location</h3>
-                <p>Moscow, Russia</p>
-            </li>
-            <li>
-                <h3>Phone number</h3>
-                <p>+7 967 777 77 77</p>
-             </li>
-             <li>
-                <h3>Email</h3>
-                <p>nargiza.daiyrbekova.kk@gmail.com</p>
-            </li>
-        </ul>  --> 
-</header> 
-<!--  <main>
-    <section id="skills">
-        <h2>Skills</h2>
-        <ul>
-            <li>HTML</li>
-            <li>VS Code</li>
-            <li>Figma</li>
-        </ul>
-    </section>
-
-    <section id="code">
-        <h2>Code example</h2>
-            <code>
-                function checkParent (src, dest) {<br>
-                    while (src != null) {<br>
-                        if (src.tagName == dest) return src<br> 
-                          src = src.parentElement<br> 
-                    }<br>
-                   return null<br> 
-                }<br>
-            </code>
-    </section>
-
-    <section id="languages">
-        <h2>Languages</h2>
-        <ul>
-            <li>English- Elementary</li>
-            <li>Russian- Fluent</li>
-            <li>Kyrgyz- Native</li>
-        </ul>
-    </section>
-
-    <section id="education">
-        <h2>Education</h2>
-        <ul>
-            <li><b>Kyrgyz National university,</b> Faculty of State and municipal administration </li>
-        </ul>
-    </section>
+    <main>
+        <section class="intro">
+            <div class="container">
+                <div class="intro-inner">
+                    <div class="intro-left">
+                        <img class="intro-img" src="images/msg777546934-72244.jpg" alt="Nargiza's avatar">
+                    </div>
+                    <div class="intro-right">
+                        <h1>Nargiza Daiyrbekova</h1>
+                        <h3>Front-end Developer</h3>
+                        <p>I am responsible, proactive, stress-resistant, sociable, honest. I look at everything with a positive attitude. I am fond of drawing, I like to draw portraits, I also like to do athletics, run in the morning, take pictures of nature, edit videos. And now I'm trying to get more experience and knowledge in the field of programming. I really like coding right now.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="contacts">
+            <div class="container">
+                <h2 class="section-title">Contacts</h2>
+                <ul>
+                    <li>
+                        <h4>Location</h4>
+                        <p>Moscow, Russia</p>
+                    </li>
+                    <li>
+                        <h4>Phone number</h4>
+                        <a href="tel:+79677777777">+7 967 777 77 77</a>
+                    </li>
+                    <li>
+                        <h4>Email</h4>
+                        <a href="mailto:nargiza.daiyrbekova.kk@gmail.com">nargiza.daiyrbekova.kk@gmail.com</a>
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <section id="skills" class="skills section">
+            <div class="container">
+                <h2 class="section-title">Skills</h2>
+                <ul>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>Figma</li> 
+                    <li>UI/UX design</li>
+                </ul>
+            </div>
+        </section>
+        <section class="code-example section">
+            <div class="container">
+                <h2 id="code" class="section-title">Code example</h2>
+                <p>
+                    <b>Task:</b>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium voluptate voluptatum voluptatem fuga saepe veritatis non? 
+                </p>
+                <pre>
+                    <code>
+                        function checkParent (src, dest) {
+                            while (src != null) {
+                                if (src.tagName == dest) return src
+                                  src = src.parentElement
+                            }
+                           return null
+                        }
+                    </code>
+                </pre>
+            </div>
+        </section>
+        <section id="languages" class="languages section">
+            <div class="container">
+                <h2 class="section-title">Languages</h2>
+                <ul>
+                    <li><b>English-</b>Elementary</li>
+                    <li><b>Russian-</b>Fluent</li>
+                    <li><b>Kyrgyz-</b>Native</li>
+                </ul>
+            </div>
+        </section>
+        <section id="education" class="education section">
+            <div class="container">
+                <h2 class="section-title">Education</h2>
+                <ul>
+                    <li><b>Kyrgyz National university,</b> Faculty of State and municipal administration </li>
+                </ul>
+            </div>
+        </section>
 </main>
-<footer>
+
+<!-- <footer>
     <p>
         Nargiza Daiyrbekova
         <a href="https://linktr.ee/jyldyzacademy2020">Jyldyz Academy</a>
