--- a/index.html
+++ b/index.html
@@ -121,15 +121,16 @@
             </div>
         </section>
 </main>
-
-<!-- <footer>
-    <p>
-        Nargiza Daiyrbekova
-        <a href="https://linktr.ee/jyldyzacademy2020">Jyldyz Academy</a>
-        <br>
-        "2022 ©"
-    </p>
-</footer> -->
-    
+<footer>
+    <div class="container section">
+        <div class="footer-link">
+            <a href="https://linktr.ee/jyldyzacademy2020" class="link">Jyldyz Academy</a>
+        </div>
+        <div class="footer">
+            <h5>2022 © Nargiza Daiyrbekova</h5>
+        </div>
+        
+    </div>
+</footer>
 </body>
 </html>
