--- a/index.html
+++ b/index.html
@@ -102,6 +102,46 @@
                 </pre>
             </div>
         </section>
+
+        <section id="portfolio" class="portfolio section">
+            <div class="container">
+                <h2 class="section-title portfolio-title">Portfolio</h2>
+                <ul>
+                    <li>
+                        <img height="250px" src="images/IMG_2755.JPG" alt="bedding">
+                        <h3>Bedding website</h3>
+                        <a 
+                          href="https://nagiraz.github.io/portfolio/"
+                          target="_blank"
+                        >
+                          View Project
+                        </a>
+                    </li>
+                    <li>
+                        <img height="250px" src="images/IMG_2755.JPG" alt="bedding">
+                        <h3>Bedding website</h3>
+                        <a 
+                          href="https://nagiraz.github.io/portfolio/"
+                          target="_blank"
+                        >
+                          View Project
+                        </a>
+                    </li>
+                    <li>
+                        <img height="250px" src="images/IMG_2755.JPG" alt="bedding">
+                        <h3>Bedding website</h3>
+                        <a 
+                          href="https://nagiraz.github.io/portfolio/"
+                          target="_blank"
+                        >
+                          View Project
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </section>
+
+
         <section id="languages" class="languages section">
             <div class="container">
                 <h2 class="section-title">Languages</h2>
@@ -128,8 +168,7 @@
         </div>
         <div class="footer">
             <h5>2022 © Nargiza Daiyrbekova</h5>
-        </div>
-        
+        </div> 
     </div>
 </footer>
 </body>
