Add adapt the layout

--- a/index.html
+++ b/index.html
@@ -33,7 +33,17 @@
                     <a class="menu-link" href="#education">Education</a>
                 </li>
             </ul> 
-           </nav>  
+            <button class="menu-toggle">
+                <svg 
+                xmlns="http://www.w3.org/2000/svg" 
+                width="24" 
+                height="24" 
+                viewBox="0 0 24 24"
+                >
+                <path d="M24 6h-24v-4h24v4zm0 4h-24v4h24v-4zm0 8h-24v4h24v-4z"/>
+                </svg>
+            </button>
+           </nav> 
           </div>     
         </div> 
     </header> 
@@ -160,16 +170,19 @@
                 </ul>
             </div>
         </section>
-</main>
-<footer>
-    <div class="container section">
-        <div class="footer-link">
-            <a href="https://linktr.ee/jyldyzacademy2020" class="link">Jyldyz Academy</a>
+    </main>
+    <footer>
+        <div class="container section">
+            <div class="footer-link">
+                <a href="https://linktr.ee/jyldyzacademy2020" class="link">Jyldyz Academy</a>
+            </div>
+            <div class="footer">
+                <h5>2022 © Nargiza Daiyrbekova</h5>
+            </div> 
         </div>
-        <div class="footer">
-            <h5>2022 © Nargiza Daiyrbekova</h5>
-        </div> 
-    </div>
-</footer>
+    </footer>
+
+    <!-- <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"></script>
+    <script src="js/main.js"></script> -->
 </body>
 </html>
