Add portfolio and website adaptation

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
                     <a class="menu-link" href="#code">Code example</a>
                 </li>
                 <li class="menu-item">
+                    <a class="menu-link" href="#portfolio">Portfolio</a>
+                </li>
+                <li class="menu-item">
                     <a class="menu-link" href="#languages">Languages</a>
                 </li>
                 <li class="menu-item">
@@ -118,7 +121,7 @@
                 <h2 class="section-title portfolio-title">Portfolio</h2>
                 <ul>
                     <li>
-                        <img height="250px" src="images/IMG_2755.JPG" alt="bedding">
+                        <img src="images/IMG_2755.JPG" alt="bedding">
                         <h3>Bedding website</h3>
                         <a 
                           href="https://nagiraz.github.io/portfolio/"
@@ -128,7 +131,7 @@
                         </a>
                     </li>
                     <li>
-                        <img height="250px" src="images/IMG_2755.JPG" alt="bedding">
+                        <img src="images/IMG_2755.JPG" alt="bedding">
                         <h3>Bedding website</h3>
                         <a 
                           href="https://nagiraz.github.io/portfolio/"
@@ -138,7 +141,7 @@
                         </a>
                     </li>
                     <li>
-                        <img height="250px" src="images/IMG_2755.JPG" alt="bedding">
+                        <img src="images/IMG_2755.JPG" alt="bedding">
                         <h3>Bedding website</h3>
                         <a 
                           href="https://nagiraz.github.io/portfolio/"
