--- a/index.html
+++ b/index.html
@@ -121,10 +121,10 @@
                 <h2 class="section-title portfolio-title">Portfolio</h2>
                 <ul>
                     <li>
-                        <img src="images/IMG_2755.JPG" alt="bedding">
+                        <img src="images/1.jpg" alt="bedding">
                         <h3>Bedding website</h3>
                         <a 
-                          href="https://nagiraz.github.io/portfolio/"
+                          href="https://nagiraz.github.io/gallery/"
                           target="_blank"
                         >
                           View Project
@@ -134,7 +134,7 @@
                         <img src="images/IMG_2755.JPG" alt="bedding">
                         <h3>Bedding website</h3>
                         <a 
-                          href="https://nagiraz.github.io/portfolio/"
+                          href="https://nagiraz.github.io/gallery"
                           target="_blank"
                         >
                           View Project
@@ -144,7 +144,7 @@
                         <img src="images/IMG_2755.JPG" alt="bedding">
                         <h3>Bedding website</h3>
                         <a 
-                          href="https://nagiraz.github.io/portfolio/"
+                          href="https://nagiraz.github.io/gallery"
                           target="_blank"
                         >
                           View Project
